--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,angular,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,angular,webstorm
 
+.vscode/
+
 ### Angular ###
 ## Angular ##
 # compiled output
